# ab-engine

./: CMakeLists.txt  Makefile  build.py  gen_sources.py  initial-setup-windows.bat  readme.md  sources.cmake
scripts/windows/: build-dawn.bat  build-web.bat  build.bat  run-web.bat  run.bat  setup.bat
scripts/windows/shared/: enter-root-dir.bat  load-msvc.bat
src/: main.cpp  printStringView.cpp  printStringView.hpp  requestAdapter.cpp  requestAdapter.hpp  requestDevice.cpp  requestDevice.hpp  useD3D12.cpp  useD3D12.hpp
src/window/: NATIVE_glfwWindow.cpp  NATIVE_glfwWindow.hpp  WEB_canvasWindow.cpp  WEB_canvasWindow.hpp  canvasWindow.cpp  canvasWindow.hpp  glfwWindow.cpp  glfwWindow.hpp  window.hpp  windowFactory.cpp  windowFactory.hpp
web/: shell.html
